# Prompt-Engineering

./: pyproject.toml  requirements.txt
Advanced/: constrained_prompt.ipynb  role_based_prompt.ipynb  self_consistency.ipynb
Advanced_Prompts/: Effectiveness_Evaluation.ipynb  Ethical_prompts.ipynb  Multilingual_prompting.ipynb  prompt_security.ipynb
advanced_implimentation/: Instruction_Engineering.ipynb  Prompt_Chaining.ipynb  Task_Decomposition.ipynb
basic/: intro.ipynb  prompt_structures.ipynb  templates_jinja.ipynb
core_techniques/: CoT.ipynb  few_shot.ipynb  zero_shot.ipynb
optimization_prompting/: Handling_Prompt_Lenght.ipynb  handling_ambiguity.ipynb  prompt_optimization.ipynb
specialized_prompts/: negative_prompting.ipynb
