[project]
name = "prompt-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-groq>=0.3.4",
    "langchain-ollama>=0.3.3",
    "python-dotenv>=1.1.1",
]
